--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,6 @@
 
 <h1>Hola dime a quien saludar</h1>
 <form action="/hola" method="post">
-  <label for="nombre"><input type="text" id="nombre" name="nombre">
-  <button type="submit">¡Hola!</button>
+  <input type="text" name="nombre"></input>
+  <input type="submit" value="¡Hola!"> </input>
 </form>
